# document-ocr-converter

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-win7.txt  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
docs/: BUILDING.md  README.zh-CN.md
models/ocr/: README.md
release/: README.md
scripts/: build-win7-folder.bat  build-win7-onefile.bat  build_win7.ps1  check_win7_compat.py  setup-win7-build.bat  setup_win7_build.ps1
src/document_ocr_tool/: __init__.py  __main__.py  config.py  docx_writer.py  gui.py  image_excel.py  layout_utils.py  logger.py  native_converter.py  ocr_converter.py  ocr_engine.py  paths.py  pdf_utils.py  pipeline.py  table_utils.py
tests/: test_image_excel.py
tools/win7-vm/: README.md  continue-win7-vm-setup-admin.bat  create_win7_test_vm.ps1  make_win7_test_assets.py  prepare_win7_vm_admin.ps1  setup_hyperv_admin.ps1
