[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-ocr-tool"
version = "1.0.0"
description = "Offline Windows desktop tool for PDF-to-Word and image-to-Excel conversion."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "HUANG ANDONG" }
]
keywords = ["ocr", "pdf", "word", "excel", "table-recognition", "windows"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business",
]
dependencies = [
  "PyMuPDF",
  "python-docx",
  "pdf2docx",
  "rapidocr-onnxruntime",
  "onnxruntime",
  "Pillow",
  "numpy",
  "opencv-python",
  "openpyxl",
]

[project.urls]
Homepage = "https://github.com/ADDA-acx/document-ocr-converter"
Repository = "https://github.com/ADDA-acx/document-ocr-converter"
Issues = "https://github.com/ADDA-acx/document-ocr-converter/issues"

[project.gui-scripts]
document-ocr-tool = "document_ocr_tool.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
